--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
+    font-family: sans-serif;
     box-sizing: border-box;
 }
 
@@ -10,17 +10,27 @@ html {
 }
 
 body {
+
     background: #080808;
-    color: #ffffff;
+    color: #fff;
 }
 
-#header {
+.sub-title {
+    color: #ff004f;
+}
+
+.header {
     width: 100%;
     height: 100vh;
 }
 
 .container {
+
     padding: 10px 10%;
+}
+
+.logo {
+    width: 140px;
 }
 
 nav {
@@ -30,25 +40,20 @@ nav {
     flex-wrap: wrap;
 }
 
-.logo {
-    width: 140px;
-}
-
 nav ul li {
     display: inline-block;
-    list-style: none;
     margin: 10px 20px;
 }
 
 nav ul li a {
-    color: #ffffff;
     text-decoration: none;
+    color: #fff;
     font-size: 18px;
     position: relative;
 }
 
 nav ul li a::after {
-    content: '';
+    content: "";
     width: 0;
     height: 3px;
     background: #ff004f;
@@ -63,26 +68,22 @@ nav ul li a:hover::after {
 }
 
 .header-text {
-    margin-top: 20%;
+    margin: 25% 10px;
     font-size: 30px;
-}
-
-.header-text h1 {
-    font-size: 55px;
-    margin-top: 20px;
 }
 
 .header-text h1 span {
     color: #ff004f;
 }
 
-/* ************************About******************* */
-#about {
+/* ----------------------------------About--------------------------------------- */
+/* total page downwards */
+
+.about {
     padding: 15px 0;
-    color: #ffffff;
 }
 
-.container h1 {
+.container .about h1 {
     margin: 40px;
 }
 
@@ -98,10 +99,16 @@ nav ul li a:hover::after {
 
 .about-col-1 img {
     width: 100%;
+    opacity: 60%;
+    border-radius: 5px;
 }
 
 .about-col-2 {
     flex-basis: 50%;
+}
+
+.about-col-2 span {
+    color: #ff004f;
 }
 
 .tab-titles {
@@ -128,8 +135,8 @@ nav ul li a:hover::after {
     transition: 0.5s;
 }
 
-.tab-links.active-link::after {
-    width: 50%;
+.tab-links:hover::after {
+    width: 100%;
 }
 
 .tab-contents ul li {
@@ -151,11 +158,11 @@ nav ul li a:hover::after {
     text-align: justify;
 }
 
-/* **********************My work********************* */
-
-#portfolio {
-    padding: 150px 0;
+/* ----------------------------------Work---------------------------------------  */
+#portfolio .container {
+    padding: 250px 0;
 }
+
 
 .work-list {
     display: grid;
@@ -171,14 +178,16 @@ nav ul li a:hover::after {
 }
 
 .work img {
-    width: 100%;
+    width: 80%;
+    height: 500px;
     border-radius: 10px;
     display: block;
+    opacity: 0.7;
     transition: transform 0.5s;
 }
 
 .layer {
-    width: 100%;
+    width: 80%;
     height: 0;
     background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
     border-radius: 10px;
@@ -215,59 +224,60 @@ nav ul li a:hover::after {
     text-align: center;
 }
 
-.work:hover img {
-    transform: scale(1.1);
-}
-
 .work:hover .layer {
     height: 100%;
+
 }
 
-.btn {
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #ff004f;
-     background: #080808;
-    padding: 14px 50px;
-    border-radius: 5px;
-    text-decoration: none;
-    color: #ffffff;
-    transition: background 0.5s;
-}
+ /* ----------------------------------Work---------------------------------------  */
 
-.btn:hover {
-    background: #ff004f;
-}
-
-/* ****************************Contact***************************** */
-.contact-left {
-    flex-basis: 35%;
-    margin-left: 20px;
-}
-
-.contact-right {
+ .contact-left
+ {
+    flex-basis: 40%;
+ }
+ .contact-right
+ {
     flex-basis: 60%;
-}
-
-.contact-left p {
+ }
+ .contact-left p
+ {
     margin-top: 30px;
-}
-
-.contact-left p i {
+ }
+ .contact-left i
+ {
     color: #ababab;
     font-size: 20px;
+ }
+ .social-icons
+ {
+    margin-top: 30px;
+ }
+.social-icons a 
+{
+    margin-right: 15px;
 }
-.btn.btn2 {
+.social-icons a :hover
+ {
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+.btn
+{
+    border: 2px solid #ff004f;
     display: inline-block;
-    background: #ff004f;
+    color: black;
+    background-color: #ff004f;
+    padding: 10px 10px;
+    border-radius: 10px;
+    margin-top: 30px;
+    text-decoration: none;
 }
-
-.contact-right form {
+.contact-right form 
+{
     width: 100%;
 }
-
-form input, form textarea {
+form input, form textarea
+{
     width: 100%;
     border: 0;
     outline: none;
@@ -276,44 +286,43 @@ form input, form textarea {
     margin: 8px 0;
     color: #ffffff;
     font-size: 18px;
-    border-radius: 5px;
+    border-radius: 5px;   
 }
-
 form .btn2 {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
+    /* display: block;
+    margin: auto; */
+   
 }
-
 .copyright {
     width: 100%;
     text-align: center;
     padding: 20px 0;
     background: #262626;
     font-weight: 300;
-    margin-top: 20px;
+    margin-top: 60px;
 }
 
 nav .fa-solid {
     display: none;
 }
-#contact h1
-{
-    padding: auto;
+
+#msg {
+    color: #e21a59;
+    margin-top: -40px;
+    me
+    display: block;
 }
-#contact a
+
+/* ----------------------------------Responsive---------------------------------------  */
+
+@media only screen and (max-width: 600px)
 {
-    margin-left: 10%;
-}
-
-
-
-
-/* ***************************Responsive******************************8 */
-@media only screen and (max-width: 600px) {
     .header-text {
-        margin-top: 100%;
+        margin: 75% 0;
         font-size: 16px;
     }
 
@@ -372,8 +381,9 @@ nav .fa-solid {
         margin-right: 20px;
     }
 
-    .layer {
-        width: 100%;
+    .layer 
+    {
+        width: 80%;
         height: 0;
         background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
         border-radius: 10px;
@@ -385,31 +395,30 @@ nav .fa-solid {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        padding: 0 30px;
+        padding: 0 40px;
         text-align: center;
-        font-size: 10px;
+        font-size: 14px;
         transition: height 0.5s;
     }
 
-    .layer h3 {
-        font-weight: 500;
-        font-size: 15px;
-        margin-bottom: 10px;
-    }
+   .layer h3 {
+    font-weight: 500;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
 
-    .layer a {
-        margin-top: 20px;
-        color: #454545;
-        text-decoration: none;
-        font-size: 12px;
-        line-height: 30px;
-        background: #ffffff;
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        text-align: center;
-    }
-
+.layer a {
+    margin-top: 20px;
+    color: #454545;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
     .contact-left,
     .contact-right {
         flex-basis: 100%;
@@ -422,4 +431,5 @@ nav .fa-solid {
     .copyright {
         font-size: 14px;
     }
+    
 }
